<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_normal" >

        <EditText
            android:id="@+id/editTextFeedbackCourse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_normal"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/hint_course"
            android:inputType="none"
            android:padding="@dimen/padding_normal" >
        </EditText>

        <EditText
            android:id="@+id/editTextFeedbackFaculty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_normal"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/hint_faculty"
            android:padding="@dimen/padding_normal" />

        <TextView
            android:id="@+id/textViewFeedbackRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/label_rating"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RatingBar
            android:id="@+id/ratingBarFeedback"
            style="@android:style/Widget.Holo.RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_normal"
            android:numStars="5"
            android:rating="1.0"
            android:stepSize="1.0" />

        <EditText
            android:id="@+id/editTextFeedbackComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_normal"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/hint_comment"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:padding="@dimen/padding_normal" >

            <requestFocus />
        </EditText>

        <ImageButton
            android:id="@+id/imageButtonFeedbackSend"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_success"
            android:contentDescription="@string/send"
            android:padding="@dimen/padding_normal"
            android:src="@drawable/ic_send" />
    </LinearLayout>

</ScrollView>