<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.ilp.ilpschedule.MainActivity"
    tools:ignore="MergeRootFrame" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_normal" >

            <ImageView
                android:id="@+id/imageViewLoginWelcome"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:contentDescription="@string/welcomeToILP"
                android:padding="@dimen/padding_normal"
                android:src="@drawable/welcome" />

            <TextView
                android:id="@+id/textViewLoginWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/padding_normal"
                android:text="@string/welcomeToILP"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/editTextLoginEmployeeId"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_normal"
                android:ems="10"
                android:hint="@string/hint_employeeId"
                android:inputType="number"
                android:padding="@dimen/padding_normal" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/editTextLoginName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_normal"
                android:ems="10"
                android:hint="@string/hint_name"
                android:padding="@dimen/padding_normal" />

            <EditText
                android:id="@+id/editTextLoginEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_normal"
                android:ems="10"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/padding_normal" />

            <EditText
                android:id="@+id/editTextLoginLg"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_low"
                android:ems="10"
                android:hint="@string/hint_lg"
                android:padding="@dimen/padding_normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="@dimen/padding_normal" >

                <TextView
                    android:id="@+id/textViewLoginLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/spinnerLoginLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_low"
                    android:layout_weight="1"
                    tools:listitem="@android:layout/simple_spinner_dropdown_item" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_success"
                android:onClick="login"
                android:padding="@dimen/padding_high"
                android:text="@string/login"
                android:textColor="@color/colorTextInverse" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>