<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_normal"
    android:orientation="vertical"
    android:padding="@dimen/padding_normal" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_low"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewSlotTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slot_item_slot"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewSlotContent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:text="A"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_low"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewCourseTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slot_item_course"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewCourseContent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:text="Javascript n all"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_low"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewFacultyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slot_item_faculty"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewFacultyContent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:text="Sridevi D V"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_low"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewRoomTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slot_item_room"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewRoomContent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:text="CR5"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorText" />
    </LinearLayout>

</LinearLayout>